--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -2661,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 287,
    "id": "8b7926af-aed5-4b3a-aa99-dde69c568b27",
    "metadata": {},
    "outputs": [
@@ -2669,8 +2669,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4667/1801951753.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  awards_df = pd.concat([awards_df, ac_bc_cl[['Year', 'English_title', 'Cinematographer']].rename(columns={'Cinematographer': 'Dir_or_prod'})], ignore_index=True)\n"
+      "/tmp/ipykernel_4667/2421984911.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  awards_df = pd.concat([awards_df, ac_bc_cl[['English_title', 'Year', 'Cinematographer']].rename(columns={'Cinematographer': 'Dir_or_prod'})], ignore_index=True)\n"
      ]
     },
     {
@@ -2694,8 +2694,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
        "      <th>English_title</th>\n",
+       "      <th>Year</th>\n",
        "      <th>Dir_or_prod</th>\n",
        "      <th>Studio</th>\n",
        "      <th>Award_mains</th>\n",
@@ -2705,113 +2705,113 @@
        "      <th>Production_country</th>\n",
        "      <th>Director</th>\n",
        "      <th>Film_Studio</th>\n",
-       "      <th>Film_studio</th>\n",
+       "      <th>Key</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>Sunrise: A Song of Two Humans</td>\n",
+       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>Charles Rosher Karl Struss</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
        "      <td>Famous Players–Lasky</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>The Devil Dancer</td>\n",
+       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>George Barnes</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
        "      <td>Fox</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>The Magic Flame</td>\n",
+       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>George Barnes</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
        "      <td>The Caddo Company</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>Sadie Thompson</td>\n",
+       "      <td>1927-01-01 00:00:00</td>\n",
        "      <td>George Barnes</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
        "      <td>Metro-Goldwyn-Mayer</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1928-01-01 00:00:00</td>\n",
        "      <td>White Shadows in the South Seas</td>\n",
+       "      <td>1928-01-01 00:00:00</td>\n",
        "      <td>Clyde De Vinna</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
-       "      <td>Nan</td>\n",
        "      <td>Feature Productions</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
+       "      <td>Nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Year                    English_title  \\\n",
-       "0  1927-01-01 00:00:00    Sunrise: A Song of Two Humans   \n",
-       "1  1927-01-01 00:00:00                 The Devil Dancer   \n",
-       "2  1927-01-01 00:00:00                  The Magic Flame   \n",
-       "3  1927-01-01 00:00:00                   Sadie Thompson   \n",
-       "4  1928-01-01 00:00:00  White Shadows in the South Seas   \n",
+       "                     English_title                 Year  \\\n",
+       "0    Sunrise: A Song of Two Humans  1927-01-01 00:00:00   \n",
+       "1                 The Devil Dancer  1927-01-01 00:00:00   \n",
+       "2                  The Magic Flame  1927-01-01 00:00:00   \n",
+       "3                   Sadie Thompson  1927-01-01 00:00:00   \n",
+       "4  White Shadows in the South Seas  1928-01-01 00:00:00   \n",
        "\n",
-       "                  Dir_or_prod Studio Award_mains Mains_cat Award_fest  \\\n",
-       "0  Charles Rosher Karl Struss    Nan         Nan       Nan        Nan   \n",
-       "1               George Barnes    Nan         Nan       Nan        Nan   \n",
-       "2               George Barnes    Nan         Nan       Nan        Nan   \n",
-       "3               George Barnes    Nan         Nan       Nan        Nan   \n",
-       "4              Clyde De Vinna    Nan         Nan       Nan        Nan   \n",
+       "                  Dir_or_prod                 Studio  Award_mains Mains_cat  \\\n",
+       "0  Charles Rosher Karl Struss  Famous Players–Lasky             0             \n",
+       "1               George Barnes                   Fox             0             \n",
+       "2               George Barnes     The Caddo Company             0             \n",
+       "3               George Barnes   Metro-Goldwyn-Mayer             0             \n",
+       "4              Clyde De Vinna   Feature Productions             0             \n",
        "\n",
-       "  Fest_cat Production_country Director Film_Studio            Film_studio  \n",
-       "0      Nan                Nan      Nan         Nan  Famous Players–Lasky   \n",
-       "1      Nan                Nan      Nan         Nan                   Fox   \n",
-       "2      Nan                Nan      Nan         Nan     The Caddo Company   \n",
-       "3      Nan                Nan      Nan         Nan   Metro-Goldwyn-Mayer   \n",
-       "4      Nan                Nan      Nan         Nan   Feature Productions   "
+       "   Award_fest Fest_cat Production_country Director Film_Studio  Key  \n",
+       "0           0                         Nan      Nan         Nan  Nan  \n",
+       "1           0                         Nan      Nan         Nan  Nan  \n",
+       "2           0                         Nan      Nan         Nan  Nan  \n",
+       "3           0                         Nan      Nan         Nan  Nan  \n",
+       "4           0                         Nan      Nan         Nan  Nan  "
       ]
      },
-     "execution_count": 280,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2820,49 +2820,77 @@
     "import pandas as pd\n",
     "\n",
     "# Création de la base de données globale\n",
-    "awards_df = pd.DataFrame(columns=['Year', 'English_title', 'Dir_or_prod', 'Studio', 'Award_mains', 'Mains_cat', 'Award_fest', 'Fest_cat', 'Production_country'])\n",
+    "awards_df = pd.DataFrame(columns=['English_title', 'Year', 'Dir_or_prod', 'Studio', 'Award_mains', 'Mains_cat', 'Award_fest', 'Fest_cat', 'Production_country'])\n",
     "\n",
     "# Academy Award - Best Cinematography\n",
     "ac_bc_cl['Mains_cat'] = 'Oscar - Best Cinematography'\n",
-    "awards_df = pd.concat([awards_df, ac_bc_cl[['Year', 'English_title', 'Cinematographer']].rename(columns={'Cinematographer': 'Dir_or_prod'})], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ac_bc_cl[['English_title', 'Year', 'Cinematographer']].rename(columns={'Cinematographer': 'Dir_or_prod'})], ignore_index=True)\n",
     "\n",
     "# Academy Award - Best Director\n",
     "ac_bd_cl['Mains_cat'] = 'Oscar - Best Director'\n",
-    "awards_df = pd.concat([awards_df, ac_bd_cl[['Year', 'English_title', 'Director']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ac_bd_cl[['English_title', 'Year', 'Director']]], ignore_index=True)\n",
     "\n",
     "# Academy Award - Best Film\n",
     "ac_bf_cl['Mains_cat'] = 'Oscar - Best Film'\n",
-    "awards_df = pd.concat([awards_df, ac_bf_cl[['Year', 'English_title', 'Film_producers', 'Film_Studio']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ac_bf_cl[['English_title', 'Year', 'Film_producers', 'Film_Studio']]], ignore_index=True)\n",
     "\n",
     "# César Award - Best Director\n",
     "ces_bd_cl['Mains_cat'] = 'César - Best Director'\n",
-    "awards_df = pd.concat([awards_df, ces_bd_cl[['Year', 'English_title', 'Director']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ces_bd_cl[['English_title', 'Year', 'Director']]], ignore_index=True)\n",
     "\n",
     "# César Award - Best Film\n",
     "ces_bf_cl['Mains_cat'] = 'César - Best Film'\n",
-    "awards_df = pd.concat([awards_df, ces_bf_cl[['Year', 'English_title', 'Director']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ces_bf_cl[['English_title', 'Year', 'Director']]], ignore_index=True)\n",
     "\n",
     "# Cannes Festival - Palme d'Or\n",
     "can_po_cl['Fest_cat'] = 'Cannes - Palme d\\'Or'\n",
-    "awards_df = pd.concat([awards_df, can_po_cl[['Year', 'English_title', 'Director', 'Production_country']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, can_po_cl[['English_title', 'Year', 'Director', 'Production_country']]], ignore_index=True)\n",
     "\n",
-    "# Autres catégories de Cannes Festival...\n",
+    "# Cannes Festival - Prix du Jury\n",
+    "can_jr_cl['Fest_cat'] = 'Cannes - Prix du Jury'\n",
+    "awards_df = pd.concat([awards_df, can_jr_cl[['English_title', 'Year', 'Director', 'Production_country']]], ignore_index=True)\n",
     "\n",
-    "# Venise Festival - Lion d'Or\n",
+    "# Cannes Festival - Grand Prix\n",
+    "can_gp_cl['Fest_cat'] = 'Cannes - Grand Prix'\n",
+    "awards_df = pd.concat([awards_df, can_gp_cl[['English_title', 'Year', 'Director', 'Production_country']]], ignore_index=True)\n",
+    "\n",
+    "# Festival de Venise - Lion d'Or\n",
     "ven_lor_cl['Fest_cat'] = 'Venise - Lion d\\'Or'\n",
-    "awards_df = pd.concat([awards_df, ven_lor_cl[['Year', 'English_title', 'Director', 'Production_country']]], ignore_index=True)\n",
+    "awards_df = pd.concat([awards_df, ven_lor_cl[['English_title', 'Year', 'Director', 'Production_country']]], ignore_index=True)\n",
     "\n",
-    "# Autres catégories de Venise Festival...\n",
+    "# Festival de Venise - Lion d'Argent\n",
+    "ven_larg_cl['Fest_cat'] = 'Venise - Lion d\\'Argent'\n",
+    "awards_df = pd.concat([awards_df, ven_larg_cl[['English_title', 'Year', 'Director', 'Key']]], ignore_index=True)\n",
+    "\n",
+    "# Festival de Venise - Grand Prix du Jury\n",
+    "ven_gj_cl['Fest_cat'] = 'Venise - Grand Prix du Jury'\n",
+    "awards_df = pd.concat([awards_df, ven_gj_cl[['English_title', 'Year', 'Director', 'Production_country']]], ignore_index=True)\n",
     "\n",
     "# Fusion de Film_producers dans Dir_or_prod\n",
     "awards_df['Dir_or_prod'].fillna(awards_df['Film_producers'], inplace=True)\n",
     "awards_df.drop(columns=['Film_producers'], inplace=True)\n",
     "\n",
-    "# Création de la colonne Film_studio\n",
-    "awards_df['Film_studio'] = ac_bf_cl['Film_Studio']\n",
+    "# Création de la colonne Studio\n",
+    "awards_df['Studio'] = ac_bf_cl['Film_Studio']\n",
     "\n",
     "# Remplissage des valeurs NaN\n",
     "awards_df.fillna('Nan', inplace=True)\n",
+    "\n",
+    "# Ajout des colonnes Award_mains, Award_fest, Mains_cat, Fest_cat\n",
+    "awards_df['Award_mains'] = 0\n",
+    "awards_df['Mains_cat'] = ''\n",
+    "awards_df['Award_fest'] = 0\n",
+    "awards_df['Fest_cat'] = ''\n",
+    "\n",
+    "# Mise à jour des valeurs pour les catégories Mainstream\n",
+    "mainstream_categories = ['Oscar - Best Cinematography', 'Oscar - Best Director', 'Oscar - Best Film', 'César - Best Director', 'César - Best Film']\n",
+    "awards_df.loc[awards_df['Mains_cat'].isin(mainstream_categories), 'Award_mains'] = 1\n",
+    "awards_df.loc[awards_df['Mains_cat'].isin(mainstream_categories), 'Mains_cat'] = awards_df.loc[awards_df['Mains_cat'].isin(mainstream_categories), 'Mains_cat'] + ' - Winner or Nominee'\n",
+    "\n",
+    "# Mise à jour des valeurs pour les catégories Festivals\n",
+    "festival_categories = ['Cannes - Palme d\\'Or', 'Cannes - Prix du Jury', 'Cannes - Grand Prix', 'Venise - Lion d\\'Or', 'Venise - Lion d\\'Argent', 'Venise - Grand Prix du Jury']\n",
+    "awards_df.loc[awards_df['Fest_cat'].isin(festival_categories), 'Award_fest'] = 1\n",
+    "awards_df.loc[awards_df['Fest_cat'].isin(festival_categories), 'Fest_cat'] = awards_df.loc[awards_df['Fest_cat'].isin(festival_categories), 'Fest_cat'] + ' - Winner or Nominee'\n",
     "\n",
     "# Affichage des premières lignes de la base de données finale\n",
     "awards_df.head()\n"
@@ -2870,8 +2898,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "id": "ec2fd87b-b5cd-4976-84d7-3f8a6c910862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Year', 'English_title', 'Original_title', 'Director', 'Key',\n",
+      "       'Fest_cat'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ven_larg_cl.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2686deab-9f80-4c48-aacc-37021379293f",
    "metadata": {},
    "outputs": [],
    "source": []
