--- a/cleaning_api_data/cleaning_api.ipynb
+++ b/cleaning_api_data/cleaning_api.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "49cfff98-78ff-48d4-a18d-176569099694",
+   "metadata": {},
+   "source": [
+    "# Nettoyage des données récupérées grâce à l'API de TMDB\n",
+    "\n",
+    "Dans cette partie nous allons nettoyer et clarifier les données récupérées grâce à l'API de TMDB. En effet, un certain nombre des variables ne nous intéresse pas, et d'autres variables sont formatées d'une certaine façon qui ne sera pas très pratique à exploiter telle quelle.\n",
+    "Nous procèderons donc en deux parties, chacune assez rapide car les données récupérées sont déjà assez bien formatées.\n",
+    "1. **Supprimer les variables inutile**\n",
+    "2. **Clarifier les variables formatées de façon trop complexe**\n",
+    "\n",
+    "## Étape 1 : Suppression des variables inutiles pour notre projet\n",
+    "\n",
+    "Nous allons donc commencer par garder uniquement les variables qui nous intéresse. Pour celà, nous regardons les noms des colonnes pour savoir à quoi chacune correspond, et ainsi savoir lesquelles nous intéresse ou non. Cette étape ne présente aucune difficulté particulière."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "cdbea70e-9dd7-469b-91ba-bafa5d5ecccb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "7fe18720-59ff-49ec-8178-fcd2a3bf8e65",
    "metadata": {},
    "outputs": [
@@ -498,24 +515,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0485e225-cb37-4210-99b8-7555489ec76f",
+   "metadata": {},
+   "source": [
+    "## Étape 2 : Reformatage de certaines variables\n",
+    "\n",
+    "Nous pouvons remarquer maintenant que certaines variables (belongs_to_collection par exemple) sont formatées de façon un peu complexes : ce sont des chaînes de caractères, ressemblant à des dictionnaires. Pour ces variables, seule une partie de cette chaîne de carcatères nous intéresse, en général ce qui suit le terme 'name'. Pour récupérer seulement cette partie là, la méthode pour laquelle nous avons opté est de passer par les Regular Expressions (le module re), ne pouvant pas utiliser les méthodes associées aux dictionnaires.\n",
+    "\n",
+    "Nous avons pris garde pour cahcune des vaariables de traiter le cas où la valeur était NaN, même si la variable 'belongs_to_collection' était la seule à en avoir. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "d631bfb9-1d7d-4720-8d2a-5cee53b32435",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pandas.core.series.Series"
+       "str"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(base['belongs_to_collection'])"
+    "type(base['belongs_to_collection'][2])"
    ]
   },
   {
@@ -985,6 +1014,14 @@
    "source": [
     "base = base.drop(['belongs_to_collection'], axis=1)\n",
     "base"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8d6560-1d10-4a8d-a2c0-4b5edb82a7d2",
+   "metadata": {},
+   "source": [
+    "Pour les autres variables, les chaînes de caractères se complexifiaient un peu, puisqu'il y pouvait y avoir plusieurs accolades à la suite. Nous avons donc modifié un peu la fonction que nous avons ensuite appliquée à la colonne."
    ]
   },
   {
@@ -2860,6 +2897,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9e0428f-1928-4378-9384-823cd6f72dbf",
+   "metadata": {},
+   "source": [
+    "Nous obtenons donc maintenant une base avec seulement les variables qui nous intéressent, et avec des valeurs soit sous forme de chaîne de caractères, soit numérique ou soit sous forme de liste, qui seront donc facilement exploitable. Nous la convertissons en .csv, pour pouvoir ensuite la fusionner avec la base scrappée des récompenses, grâce à la variable 'title', qui correspond à la variable 'English_title' dans la base des récompenses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "id": "357ce11c-ca90-415a-937d-94808bf61cb5",
@@ -2868,14 +2913,6 @@
    "source": [
     "base.to_csv('Movies_Clean.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7e7e36d-900e-4aef-b9fd-300dc1eab74b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
