API fin avec réalisateurs

--- a/API/API.ipynb
+++ b/API/API.ipynb
@@ -5,7 +5,7 @@
    "id": "9a012b99-1eed-4d65-bc3a-2e71fc26860d",
    "metadata": {},
    "source": [
-    "# Récupération de données cinélatographiques grâce à l'API de TMDB\n",
+    "# Récupération de données cinématographiques grâce à l'API de TMDB\n",
     "\n",
     "Nous avons décidé, pour notre projet, de nous intéresser au cinéma, et d'arriver vers un algorithme de recommendation. Pour cela nous avons alors besoin d'une base de données comportant un certain nombre de films ainsi que des informations les concernant comme leur genre, leur année de sortie... \n",
     "\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "ada6e888-e2df-434f-bdc1-69ddf4c53502",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f24e5965-adc9-407b-847c-9acea3eab0f4",
    "metadata": {},
    "outputs": [
@@ -748,27 +748,26 @@
     "df = pd.read_csv('MoviesPopular.csv')\n",
     "\n",
     "for movie_id in df['id']:\n",
-    "    endpoint = f'/movie/{movie_id}'\n",
+    "    endpoint = f'/movie/{movie_id}/credits'\n",
     "    params = {'api_key': api_key}\n",
     "    response = requests.get(f'{base_url}{endpoint}', params=params)\n",
     "    \n",
     "    if response.status_code == 200:\n",
     "        movie_details = response.json()\n",
-    "        # Extract director information from the 'credits' section\n",
-    "        credits = movie_details.get('credits', {})\n",
-    "        directors = [crew['name'] for crew in credits.get('crew', []) if crew.get('job') == 'Director']\n",
+    "        # Extract director information from the 'crew' section\n",
+    "        credits = movie_details.get('crew', {})\n",
+    "        directors = [crew['name'] for crew in credits if crew.get('job') == 'Director']\n",
     "        \n",
     "        # Add director information to the list\n",
     "        movie_details_list.append({'id': movie_id, 'directors': directors})\n",
-    "        movie_details_list.append(movie_details)\n",
     "    else:\n",
     "        print(f'Error: {response.status_code}, {response.text}')\n",
     "\n",
     "# On converti en dataframe le résultat\n",
     "df_directors = pd.DataFrame(movie_details_list)\n",
-    "\n",
+    "df_directors\n",
     "# Merge the director information with the original DataFrame\n",
-    "df_final = pd.merge(df, df_directors, on='id', how='left')\n"
+    "#df_final = pd.merge(df, df_directors, on='id', how='left')\n"
    ]
   },
   {
@@ -781,8 +780,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e996e5cd-f0a8-4656-8850-e85defbe631a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nils Gaup']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if response.status_code == 200:\n",
+    "        movie_details = response.json()\n",
+    "        # Extract director information from the 'credits' section\n",
+    "        credits = movie_details.get('crew', {})\n",
+    "        directors = [crew['name'] for crew in credits if crew.get('job') == 'Director']\n",
+    "        \n",
+    "        # Add director information to the list\n",
+    "       # movie_details_list.append({'id': 897087, 'directors': directors})\n",
+    "        #movie_details_list.append(movie_details)\n",
+    "directors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea53b683-3d43-41d9-9f26-f576f8d03bc8",
    "metadata": {},
    "outputs": [],
    "source": []
