--- a/visualiser/visu_dasha-2.ipynb
+++ b/visualiser/visu_dasha-2.ipynb
@@ -5,8 +5,8 @@
    "id": "c012b8c4-2e9d-49cd-aff0-9561335837de",
    "metadata": {},
    "source": [
-    "# Visualisation des données \n",
-    "Dans cette partie nous allons procéder à la visualisation des données obtenues à la fois à base du scrapping et de l'API de tmdb. Parmi les graphiques que nous souhaitons réaliser : \n",
+    "# **Visualisation des données** \n",
+    "Dans cette partie nous allons procéder à la visualisation des données obtenues à la fois à base du scrapping et de l'API de TMDB. Parmi les graphiques que nous souhaitons réaliser : \n",
     "\n",
     "-  Les nuages de mots répresentant les genres les plus populaires:\n",
     "    *  dans toute la base TMDB\n",
@@ -117,9 +117,9 @@
    "id": "5e24fd60-860d-4663-92a6-c29e6c9a246e",
    "metadata": {},
    "source": [
-    "## Les nuages de mots représentant les genres \n",
+    "## **Les nuages de mots pour étudier l'occurence de genres**\n",
     "\n",
-    "### Dans toute la base TMDB \n",
+    "### **Dans toute la base TMDB**\n",
     "Nous allons essayer de produire les nuages de mots pour observer quels sont les genres de films les plus présents dans notre base. \n",
     "Pour ce faire, nous devons d'abord transformer la colonne 'genres_list' de notre base en chaîne de caractères avec des mots séparés par les espaces, puis le concatener en un seul texte. "
    ]
@@ -220,7 +220,7 @@
    "id": "68d03b2f-6308-404d-928c-21c523095093",
    "metadata": {},
    "source": [
-    "### Parmi les films nominés dans les compétitions cinématographiques mainstream (Oscar, César)\n",
+    "### **Parmi les films nominés dans les compétitions cinématographiques mainstream (Oscar, César)**\n",
     "Nous allons réproduire cette expérience ensuite en regardant de près les mêmes informations mais pour les films nominés pour les compétitions telles que Oscar et César. "
    ]
   },
@@ -333,7 +333,7 @@
    "id": "d7c8c77b-f1a7-4a08-917a-347c77fdc147",
    "metadata": {},
    "source": [
-    "### Parmi les films nominés dans les festivals cinématographiques (Cannes, Venise)\n",
+    "### **Parmi les films nominés dans les festivals cinématographiques (Cannes, Venise)**\n",
     "Nous allons également analyser et comparer l'occurrence des genres de cinéma parmi les films nominés dans les compétitions telles que le Festival de Cannes et le Festival de Venise."
    ]
   },
@@ -442,9 +442,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf43f68a-8ade-4555-ab73-9529ff4bd71c",
+   "metadata": {},
+   "source": [
+    "### **Conclusions et limites** \n",
+    "\n",
+    "Nous pouvons \n",
+    "\n",
+    "Notons aussi que notre analyse peut comporter des biais - en effet, nous n'avons pas étudié toutes les catégories dans lesquelles les films pourraient être nominés, et le nombre de films présents à la fois dans notre base récupérée grâce à l'API et grâce au scrapping reste faible, de l'ordre de 700 toute nomination confondue. Il est donc difficile à le généraliser à toutes les nominations ou compétitions cinématographique, mais étant donné les contraintes techniques pour notre cas (la contrainte de temps, et la difficulté de nettoyage des données scrappées sur Wikipédia), ces résultats restent intéressants pour notre analyse et la construction de l'algorithme de recommendation. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae865db4-3ed8-46df-a29c-b12b93fca6b5",
+   "id": "b63264ce-ca74-4b7d-a770-6dd7e310f332",
    "metadata": {},
    "outputs": [],
    "source": []
