mise en commun 2

--- a/visualiser/data_viz_11.ipynb
+++ b/visualiser/data_viz_11.ipynb
@@ -457,7 +457,7 @@
    "id": "45f64bd1-a03c-4d56-ad4e-4c1bd0103c16",
    "metadata": {},
    "source": [
-    "## Évolution temporelle du budget moyen des films\n",
+    "## **Évolution temporelle du budget moyen des films**\n",
     "\n",
     "Dans un premier temps, nous allons essayer de comparer les différents budget des films en fonction de plusieurs critères, afin de voir à quel point le budget d'un film peut être un critère intéressant dans un algorithme de recommendation. Nous commençons par un premier graphique afin de représenter l'évolution du budget moyen à travers le temps."
    ]
@@ -1042,7 +1042,7 @@
    "id": "9096e046-887a-4924-8bc2-30e9bfe87101",
    "metadata": {},
    "source": [
-    "## Notes moyennes des utilisateurs par genre"
+    "## **Notes moyennes des utilisateurs par genre**"
    ]
   },
   {
